Moved the logic of unpacking archives on the server into a separate UnZip class. Added two functions to the class Algorithms . getTableRow() generates a table row containing file names, index, and similarity score. getFilesPath() outputs the full path of the downloaded file and the name of the folder with the result of checking. Added display xml tags in html tag <pre>, by replacing '<' and '>' with &lt; and &gt;. A list with xml files was added to the Filewalker class. Implemented RowComparator and Row class for sorting rows of table with results. Added getXMLTokens() function to Start class to process xml file. In Winnowing fixed bug in similarity estimation calculation by length (was coefficient 1 became coefficient 2). Added classes to antlr4 package, for xml documents processing. AdviceController for error handling and CookieException, InvalidFileExtesionException, Response. Added page to display errors. Implemented navigation panel. Made settings template on the main page. Removed unused handlers in the FileUploadController.