@@ -2,16 +2,14 @@ package algorithms;
 
 
 import struct.Hash;
+import struct.Row;
 
 import java.io.*;
 import java.nio.ByteBuffer;
-import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.NoSuchAlgorithmException;
 import java.util.*;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipInputStream;
 
 
 public class Algorithms {
@@ -116,48 +114,6 @@ public class Algorithms {
         return result.toString();
     }
 
-    public static void unZipFile(InputStream is, String dest) throws IOException {
-        File destDir = new File(dest);
-        byte[] buffer = new byte[1024];
-        ZipInputStream zis = new ZipInputStream(is, Charset.forName("IBM866"));
-        ZipEntry zipEntry = zis.getNextEntry();
-        while (zipEntry != null) {
-            File newFile = newFile(destDir, zipEntry);
-            if (zipEntry.isDirectory()) {
-                if (!newFile.isDirectory() && !newFile.mkdirs()) {
-                    throw new IOException("Failed to create directory " + newFile);
-                }
-            } else {
-                File parent = newFile.getParentFile();
-                if (!parent.isDirectory() && !parent.mkdirs()) {
-                    throw new IOException("Failed to create directory " + parent);
-                }
-
-                FileOutputStream fos = new FileOutputStream(newFile);
-                int len;
-                while ((len = zis.read(buffer)) > 0) {
-                    fos.write(buffer, 0, len);
-                }
-                fos.close();
-            }
-            zipEntry = zis.getNextEntry();
-        }
-        zis.closeEntry();
-        zis.close();
-    }
-
-    private static File newFile(File destinationDir, ZipEntry zipEntry) throws IOException {
-        File destFile = new File(destinationDir, zipEntry.getName());
-
-        String destDirPath = destinationDir.getCanonicalPath();
-        String destFilePath = destFile.getCanonicalPath();
-
-        if (!destFilePath.startsWith(destDirPath + File.separator)) {
-            throw new IOException("Entry is outside of the target dir: " + zipEntry.getName());
-        }
-
-        return destFile;
-    }
 
     public static String getFileExtension(String fileName) {
         int i = fileName.lastIndexOf('.');
@@ -170,24 +126,40 @@ public class Algorithms {
 
     public static void cartesianProduct(ArrayList<String> filesPath1,
                                         ArrayList<String> filesPath2,
-                                        String uploadDir) throws IOException, NoSuchAlgorithmException {
+                                        String uploadDir, boolean isXML) throws IOException, NoSuchAlgorithmException {
         Start start;
         for (int i = 0; i < filesPath1.size(); i++) {
             File file1 = new File(filesPath1.get(i));
             for (int j = 0; j < filesPath2.size(); j++) {
                 File file2 = new File(filesPath2.get(j));
-                System.out.println(i + " " + j);
-                start = new Start(file1.getAbsolutePath(), file2.getAbsolutePath(), "sha-1");
+
+                start = new Start(file1.getAbsolutePath(), file2.getAbsolutePath(), "sha-1", isXML);
+
+                String filenames = file1.getName() + '\n' +
+                        file2.getName() + '\n' +
+                        file1.getAbsolutePath() + '\n' +
+                        file2.getAbsolutePath() + '\n';
 
                 if(start.getIntervals1() != null) {
                     List<String> content1 = Files.readAllLines(Path.of(file1.getPath()));
                     List<String> content2 = Files.readAllLines(Path.of(file2.getPath()));
+
 
                     String result1, result2;
                     ArrayList<int[]> list1, list2;
 
                     list1 = start.getIntervals1();
                     list2 = start.getIntervals2();
+
+                    for (int k = 0; k < content1.size(); k++) {
+                        content1.set(k, content1.get(k).replaceAll("<", "&lt;"));
+                        content1.set(k, content1.get(k).replaceAll(">", "&gt;"));
+                    }
+
+                    for (int k = 0; k < content2.size(); k++) {
+                        content2.set(k, content2.get(k).replaceAll("<", "&lt;"));
+                        content2.set(k, content2.get(k).replaceAll(">", "&gt;"));
+                    }
 
                     result1 = highlightText(content1, list1);
                     result2 = highlightText(content2, list2);
@@ -199,10 +171,12 @@ public class Algorithms {
                     new File(resultPath).mkdir();
 
 
+                    Files.write(Path.of(resultPath + '\\' + "filenames.txt"), filenames.getBytes());
                     Files.write(Path.of(resultPath + '\\' + "1.txt"), result1.getBytes());
                     Files.write(Path.of(resultPath + '\\' + "2.txt"), result2.getBytes());
                     Files.write(Path.of(resultPath + '\\' + "score.txt"),
                             String.valueOf(start.getWinnowing().getScore()).getBytes());
+
                 } else {
                     String resultPath = uploadDir + '\\' + "Results";
 
@@ -210,12 +184,49 @@ public class Algorithms {
                     resultPath += '\\' + file1.getName() + '_' + file2.getName() + '_' + i + '_' + j;
                     new File(resultPath).mkdir();
 
-                    Files.write(Path.of(resultPath + '\\' + "1.txt"), "".getBytes());
-                    Files.write(Path.of(resultPath + '\\' + "2.txt"), "".getBytes());
+                    String content1 = Files.readString(Path.of(file1.getAbsolutePath()));
+                    String content2 = Files.readString(Path.of(file2.getAbsolutePath()));
+
+                    Files.write(Path.of(resultPath + '\\' + "filenames.txt"), filenames.getBytes());
+                    Files.write(Path.of(resultPath + '\\' + "1.txt"), content1.getBytes());
+                    Files.write(Path.of(resultPath + '\\' + "2.txt"), content2.getBytes());
                     Files.write(Path.of(resultPath + '\\' + "score.txt"),
                             String.valueOf(start.getWinnowing().getScore()).getBytes());
                 }
             }
         }
     }
+
+
+   public static Row getTableRow(String path, String dir, int counter) throws IOException {
+        String score = Files.readString(Path.of(path + '\\' + "Results" + '\\' + dir + '\\' + "score.txt"));
+        List<String> filenames =
+                Files.readAllLines(Path.of(path + '\\' + "Results" + '\\' + dir + '\\' + "filenames.txt"));
+        return new Row(filenames.get(0), filenames.get(1), score, counter);
+   }
+
+
+   public static ArrayList<String> getFilesPath(String path, String uuid, int id) throws IOException {
+       ArrayList<String> paths = new ArrayList<>();
+       File root = new File(path + '\\' + "Results");
+       File[] list = root.listFiles();
+       int counter = 1;
+       if (list == null) return paths;
+
+       for ( File f : list ) {
+           if (f.isDirectory()) {
+               if (counter == id) {
+                   List<String> filenames =
+                           Files.readAllLines(Path.of(path + '\\'
+                                   + "Results" + '\\' + f.getName() + '\\' + "filenames.txt"));
+                   paths.add(filenames.get(2).split(uuid)[1].substring(3));
+                   paths.add(filenames.get(3).split(uuid)[1].substring(3));
+                   paths.add(f.getName());
+                   return paths;
+               }
+               counter++;
+           }
+       }
+       return paths;
+   }
 }
